# kmi_server

./: CMakeLists.txt  Makefile  README.md  config_parser.cpp  config_parser.h  kmi.config  kmi.sln  kmi.vcxproj  main.cpp
temp/: kmi.exe.recipe  kmi.ipdb  kmi_server.exe.recipe  kmi_server.ipdb
temp/kmi.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  kmi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
